--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+# Library dependencies
+pydantic>=2.0.0
+pydantic-settings
 httpx==0.27.0
 beautifulsoup4==4.12.3
-lxml==5.1.0
 typing-extensions>=4.0.0
+--only-binary :all: lxml
